--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@temporalio/client": "1.7.0",
     "@temporalio/worker": "1.7.0",
     "@temporalio/workflow": "1.7.0",
-    "nanoid": "3.x"
+    "nanoid": "3.x",
+    "waait": "^1.0.5"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.0",
